# rust_yew_router_starting_point

./: README.md
web_yew/: Cargo.toml  index.html
web_yew/src/: app.rs  main.rs
web_yew/src/components/: header.rs
web_yew/src/pages/: about_page.rs  home_page.rs
